minikube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  labels:
    app: url-shortener
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener
        image: junjiekoh/url-shortener:0.6.4
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-auth
  labels:
    app: url-shortener-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener-auth
  template:
    metadata:
      labels:
        app: url-shortener-auth
    spec:
      containers:
      - name: url-shortener-auth
        image: junjiekoh/url-shortener-auth:0.1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-auth-service
spec:
  selector:
    app: url-shortener-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: urlshortener.k8s.com # needs to be added to Windows hosts file
      http:
        paths:
          - pathType: Prefix
            path: /url-shortener
            backend:
              service:
                name: url-shortener-service
                port:
                  number: 8000
    - host: urlshortener-auth.k8s.com # needs to be added to Windows hosts file
      http:
          paths:
            - pathType: Prefix
              path: /url-shortener-auth
              backend:
                service:
                  name: url-shortener-auth-service
                  port:
                    number: 8001
---
